Bug 122238 - Backspace does not work in KDE
Summary: Backspace does not work in KDE
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Aleksei Nikiforov
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords:
: 122333 122687 123323 123411 123447 123594 (view as bug list)
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2018-12-21 09:25 UTC by Kriton Kyrimis
Modified: 2019-02-24 04:00 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Info from Help->About LibreOffice (195 bytes, text/plain)
2018-12-21 17:26 UTC, Kriton Kyrimis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kriton Kyrimis 2018-12-21 09:25:11 UTC
If I type some text in the input line or in a cell and then try to delete it using backspace, the backspace key does nothing.

A similar problem appears with the "Find Text" field in the search bar and the "Font Name" and "Font Size" fields.

It would seem that the key binding for backspace is missing from various places.


The problem appears when the KDE interface is used. With the gnome interface, i.e., if I use OOO_FORCE_DESKTOP=gnome, backspace works fine.
Comment 1 Xisco Faulí 2018-12-21 15:31:06 UTC
Could you please paste the info from Help - about LibreOffice ?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' once the information has been provided
Comment 2 Kriton Kyrimis 2018-12-21 17:26:30 UTC
Created attachment 147762 [details]
Info from Help->About LibreOffice
Comment 3 Jan-Marek Glogowski 2018-12-21 18:38:34 UTC
I can confirm this with todays master (LO 6.3) and the qt5 plugin.

This is really puzzling. The QWidget never receives the backspace key-press event. We just get key-release events in Calc.
I thought of an accessibility bug, but it also happens without that code.
It works correctly everywhere else I tried, except in the Calc sheet. WTF?!

One workaround is to use Shift+Backspace.
Comment 4 Michael Weghorn 2018-12-27 01:45:09 UTC
*** Bug 122333 has been marked as a duplicate of this bug. ***
Comment 5 Julien Nabet 2018-12-27 23:15:13 UTC
I tried to compare gtk3 and qt5 and wonder if the pb may be caused by implementation of getTransferDataFlavors/getTransferDataFlavorsAsVector
Comment 6 Katarina Behrens (Inactive) 2019-01-10 12:59:07 UTC
Workaround for those affected by the bug: go to Tools > Options > Customize > Keyboard, find 'Backspace' keyboard shortcut and delete it. Or replace it with something else.
This bug happens only in Calc because Calc is the only app where Backspace is assigned to some meaningful action
Comment 7 Buovjaga 2019-01-13 13:37:45 UTC
*** Bug 122687 has been marked as a duplicate of this bug. ***
Comment 8 Vera Blagoveschenskaya 2019-01-15 13:51:20 UTC
Bug is still actual

Version: 6.3.0.0.alpha0+
Build ID: 35ea8fc24ae749b8a87b7ddb5df22ecc4f58cfd3
CPU threads: 4; OS: Linux 4.14; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-01-15_01:16:13
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 9 Commit Notification 2019-01-16 21:39:04 UTC
Aleksei Nikiforov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/5843e14a4ddc6d2b1e375ca26eec33033bfad455%5E%21

tdf#122238 KDE5: disable mechanism of Qt for shortcut activation

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Weghorn 2019-01-19 10:53:47 UTC
I can verify this no longer happens with

Version: 6.3.0.0.alpha0+
Build ID: 87bf8b7900fe4757bd8494f7a72966915f653eb6
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded

However, as a regression from this fix, opening the menu no longer works using the keyboard, s. bug 122814.
Comment 11 Xisco Faulí 2019-01-23 13:07:58 UTC
*** Bug 120842 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2019-01-28 14:53:21 UTC
Aleksei Nikiforov committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/04dff1b796c1ee84da0b2861fc42e35891f76101%5E%21

tdf#122238 KDE5: disable mechanism of Qt for shortcut activation

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Franklin Weng 2019-01-30 14:41:56 UTC
Still not fixed in

版本:6.2.1.0.0+
組建 ID:c985db8b603d809d5896e42259e0768d607177f7
CPU 執行緒:4; OS:Linux 4.15; UI 算繪:預設; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-2, Time: 2019-01-28_10:45:37
語言地區:zh-TW (zh_TW.UTF-8); UI語言:zh-TW
Calc: threaded
Comment 14 Xisco Faulí 2019-01-30 15:23:28 UTC
(In reply to Franklin Weng from comment #13)
> Still not fixed in
> 
> 版本:6.2.1.0.0+
> 組建 ID:c985db8b603d809d5896e42259e0768d607177f7
> CPU 執行緒:4; OS:Linux 4.15; UI 算繪:預設; VCL: kde5; 
> TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-2, Time:
> 2019-01-28_10:45:37
> 語言地區:zh-TW (zh_TW.UTF-8); UI語言:zh-TW
> Calc: threaded

Just for the record, c985db8b603d809d5896e42259e0768d607177f7 doesn't contain the commit fixing this issue.
Comment 15 Hans P. Möller 2019-01-30 20:30:44 UTC
Same behavior in VCL=qt5
Comment 16 Michael Weghorn 2019-01-31 01:06:13 UTC
(In reply to Hans P. Möller from comment #15)
> Same behavior in VCL=qt5

What LibreOffice version? I quickly verified it's fixed on current master, and it should also be fixed with LibreOffice 6.2.1 (or any other build containing the commit from comment 12, but not in LibreOffice 6.2.0).
Comment 17 Xisco Faulí 2019-02-11 09:43:35 UTC
*** Bug 123323 has been marked as a duplicate of this bug. ***
Comment 18 Xisco Faulí 2019-02-12 17:52:13 UTC
*** Bug 123411 has been marked as a duplicate of this bug. ***
Comment 19 Eike Rathke (retired, only occasionally showing up) 2019-02-13 19:16:46 UTC
*** Bug 123447 has been marked as a duplicate of this bug. ***
Comment 20 Katarina Behrens (Inactive) 2019-02-20 16:56:00 UTC
*** Bug 123594 has been marked as a duplicate of this bug. ***
Comment 21 Franklin Weng 2019-02-24 04:00:48 UTC
Verified fixed in

版本:6.2.1.1
組建 ID:757c58e8cb70b2982843211a54750fb3cd79acd5
CPU 執行緒:4; OS:Linux 4.15; UI 算繪:預設; VCL: kde5; 
語言地區:zh-TW (zh_TW.UTF-8); UI語言:zh-TW
Calc: threaded